wacom: Fix NULL pointer dereference

If the public gsd_wacom_device_get_display_monitor function is
called, it eventually finds its way up here. With a NULL 'device'
argument, we segfault rather than gracefully returning NULL as
other exceptional conditions in the function do.

https://bugzilla.gnome.org/show_bug.cgi?id=668545